--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@cloudinary/react": "^1.13.0",
+        "@cloudinary/url-gen": "^1.21.0",
+        "@emailjs/browser": "^4.4.1",
         "@nextui-org/react": "^2.4.8",
+        "axios": "^1.7.7",
+        "emailjs": "^4.0.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.4.1",
         "three": "^0.169.0"
     },
     "devDependencies": {
