--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@nextui-org/react": "^2.4.8",
         "axios": "^1.7.7",
         "emailjs": "^4.0.3",
+        "gapi-script": "^1.2.0",
+        "jszip": "^3.10.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.4.1",
