--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "jszip": "^3.10.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-dropzone": "^14.2.10",
         "react-hot-toast": "^2.4.1",
         "three": "^0.169.0"
     },
