--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.2.10",
         "react-hot-toast": "^2.4.1",
+        "react-router-dom": "^6.27.0",
         "three": "^0.169.0"
     },
     "devDependencies": {
