--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 VITE_CLOUDINARY_URL='https://api.cloudinary.com/v1_1/dlhgypwnv/raw/upload'
 
 
-VITE_EMAILJS_SERVICE_ID=service_9itde3s,
-VITE_EMAILJS_TEMPLATE_ID=template_mef5ebc
-VITE_EMAILJS_SECRET=wZ-guyfVuBq-M1VSk
+VITE_EMAILJS_SERVICE_ID='service_pjm2ygi',
+VITE_EMAILJS_TEMPLATE_3DCALC_ID='template_gv5w7gq'
+VITE_EMAILJS_TEMPLATE_BASIC_FORM_ID='template_me17ah3'
+VITE_EMAILJS_PUBLIC_KEY='mPibjec-1BcIVYKU7'
