--- a/config.json
+++ b/config.json
@@ -4,14 +4,38 @@
         "standard": 0.05,
         "soft": 0.1
     },
-    "materialPrices": {
-        "PLA": 3,
-        "PETG": 3,
-        "ASA": 4,
-        "ABS": 4,
-        "PC": 7,
-        "TPU": 10
-    },
+    "materialPrices": [
+        {
+            "material": "PLA",
+            "price": 3,
+            "density": 1.24
+        },
+        {
+            "material": "PET-G",
+            "price": 3,
+            "density": 1.27
+        },
+        {
+            "material": "ASA",
+            "price": 4,
+            "density": 1.04
+        },
+        {
+            "material": "ABS",
+            "price": 4,
+            "density": 1.04
+        },
+        {
+            "material": "PC",
+            "price": 7,
+            "density": 1.04
+        },
+        {
+            "material": "TPU",
+            "price": 10,
+            "density": 1.24
+        }
+    ],
 
     "carriers": [
         {
